--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -9,7 +9,7 @@
 	<mx:Script source="main.as" />
 	<mx:Fade id="myFade"/>
 	<mx:Image id="defaultImage" source="@Embed(source='splash.png')" visible="false"/> <!-- Dafault icons Image -->
-	<mx:Image id="waitingImage" source="@Embed(source='waiting.swf')" visible="false"/> <!-- Dafault icons Image -->
+	<mx:Image id="waitingImage" source="@Embed(source='waiting.swf')" visible="false"/> <!-- Waiting Image -->
 
 	<mx:states>
 		<mx:State name="editorParams">
@@ -34,14 +34,21 @@
 		</mx:State>
 		<mx:State name="dropDownMenuParams">
 			<mx:AddChild relativeTo="{hbox1}" position="before">
-				<mx:HBox width="100%" verticalAlign="bottom">
-					
+				<mx:HBox width="100%">
 					<mx:Spacer width="{ident_2}"/>
-					<mx:ComboBox width="180"/>
-					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'displaytext')}:"/>
-					<mx:TabNavigator width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
-					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'value')}:"/>
-					<mx:TextArea height="20" width="100" cornerRadius="3"/>
+					<mx:VBox width="100%">
+						<mx:HBox width="100%" verticalAlign="bottom">
+							<mx:ComboBox width="180"/>
+							<mx:LinkButton label="Add element"/>
+							<mx:LinkButton label="Remove element"/>
+						</mx:HBox>
+						<mx:HBox width="100%">
+							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'displaytext')}:"/>
+							<mx:TabNavigator width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
+							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'value')}:"/>
+							<mx:TextArea height="20" width="100" cornerRadius="3"/>
+						</mx:HBox>
+					</mx:VBox>
 				</mx:HBox>
 			</mx:AddChild>
 		</mx:State>
@@ -51,7 +58,7 @@
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Spacer width="{ident_1}"/>
 					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'language')}:"/>
-					<mx:ComboBox width="200" id="addLanguageComboBox" dataProvider="{langsSource.language}" labelField="@text" height="20"></mx:ComboBox>
+					<mx:ComboBox width="200" id="addLanguageComboBox" dataProvider="{langsSource.language}" labelField="@label" height="20"></mx:ComboBox>
 					<mx:LinkButton label="{langData.language.(@id == langStr).sentence.(@label == 'add')}" click="{addSupLanguage();}"/>
 					<mx:LinkButton label="{langData.language.(@id == langStr).sentence.(@label == 'cancel')}" click="{currentState = '';}"/>
 				</mx:HBox>
@@ -62,7 +69,7 @@
 				<mx:HBox width="100%">
 					<mx:Spacer width="{ident_1}"/>
 					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'language')}:"/>
-					<mx:ComboBox width="200" id="remLanguageComboBox" dataProvider="{supLanguages.language}" labelField="@text" height="20"></mx:ComboBox>
+					<mx:ComboBox width="200" id="remLanguageComboBox" dataProvider="{supLanguages.language}" labelField="@label" height="20"></mx:ComboBox>
 					<mx:LinkButton label="{langData.language.(@id == langStr).sentence.(@label == 'remove')}" click="{removeSupLanguage();}"/>
 					<mx:LinkButton label="{langData.language.(@id == langStr).sentence.(@label == 'cancel')}" click="{currentState = '';}"/>
 				</mx:HBox>
@@ -79,7 +86,7 @@
 			<mx:TextArea width="100%" borderStyle="none" editable="false" height="100"
 				text="To continue you must choose at least one language to use. It will be the first native supported object language. Not the interface language!"/>
 			<mx:HBox horizontalAlign="center" width="100%">
-				<mx:ComboBox id="nativeLanguageComboBox" dataProvider="{langsSource.language}" labelField="@text" height="20" width="200"/>
+				<mx:ComboBox id="nativeLanguageComboBox" dataProvider="{langsSource.language}" labelField="@label" height="20" width="200"/>
 				<mx:Button height="20" label="OK" click="{checkForLanguageSelection();}"/>
 			</mx:HBox>
 		</mx:Panel>
@@ -106,14 +113,14 @@
 						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- Object Name -->
 							<mx:Label id="onameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'oname')}" width="{ident_1}"
-								toolTip="{langData.language.(@id == langStr).sentence.(@id == 63)}"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 'a63')}"/>
 							<mx:TextArea id="onameTextArea" width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- ID -->
 							<mx:Label id="idLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'id')}" width="{ident_1}"
-								toolTip="{langData.language.(@id == langStr).sentence.(@id == 64)}"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 'a64')}"/>
 							<mx:TextArea id="idTextArea" width="100%" height="20" editable="false" cornerRadius="3"/>
 						</mx:HBox>
 						
@@ -217,7 +224,8 @@
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="lngsLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'languages')}" width="{ident_1}"/>
-							<mx:TextArea id="supLangsTextArea" width="100%" height="20" cornerRadius="3" editable="false" creationComplete="{supLangsTextArea.text = supLanguages.language.@label;}"/>
+							<mx:TextArea id="supLangsTextArea" width="100%" height="20" cornerRadius="3" editable="false"
+								creationComplete="{supLangsTextArea.text = supLanguages.language.@id;}"/>
 						</mx:HBox>
 						<mx:HBox width="100%" id="hbox3" verticalAlign="middle">
 							<mx:Spacer width="{ident_1}"/>
@@ -306,7 +314,7 @@
 							<mx:Button id="codeButton" label="{langData.language.(@id == langStr).sentence.(@label == 'ocinterface')}"
 								creationComplete="{codeButton.enabled = false;}"
 								click="{attributePropVS.selectedChild = attrCodeInterfacePanel; attrCodeInterfacePanel.visible = true;}"
-								toolTip="{langData.language.(@id == langStr).sentence.(@id == 72)}"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 'a72')}"/>
 								
 						</mx:HBox>
 						
