in Soap.as added getAllTypes()
git-svn-id: http://svn.vdombox.ru/flextools/trunk@510 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/LoadObjects/LoadObjects02.mxml
+++ b/IDE/LoadObjects/LoadObjects02.mxml
@@ -74,7 +74,7 @@
 				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_OK, test);
 				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_ERROR, test);
 				*/
-				soap.listApplications();
+			/*	soap.listApplications();
 				soap.addEventListener(SoapEvent.LIST_APLICATION_OK, test);
 				soap.addEventListener(SoapEvent.LIST_APLICATION_ERROR, test);
 					/*
@@ -113,7 +113,9 @@
 				soap.addEventListener(SoapEvent.SET_VALUE_ERROR, test);
 				
 			*/	
-				
+				soap.getAllTypes();
+				soap.addEventListener(SoapEvent.GET_ALL_TYPES_OK, test);
+				soap.addEventListener(SoapEvent.GET_ALL_TYPES_ERROR, test);
 			}
 			
 			private function test(ev:SoapEvent):void{
