--- a/IDE/LoadObjects/LoadObjects02.mxml
+++ b/IDE/LoadObjects/LoadObjects02.mxml
@@ -36,128 +36,125 @@
 			}//783-661
 			private function startMetods(evt:SoapEvent):void{
 		/*		soap.createApplication();
-				soap.addEventListener(SoapEvent.CREATE_APPLICATION_OK, test);
-				soap.addEventListener(SoapEvent.CREATE_APPLICATION_ERROR, test);
+				soap.addEventListener(SoapEvent.CREATE_APPLICATION_OK, myFunction);
+				soap.addEventListener(SoapEvent.CREATE_APPLICATION_ERROR, myFunction);
 			**/	
 			
-			/*
+			/*  // 11
 				soap.createObject();
 				
-				soap.addEventListener(SoapEvent.CREATE_OBJECT_OK, test);
-				soap.addEventListener(SoapEvent.CREATE_OBJECT_ERROR, test);
+				soap.addEventListener(SoapEvent.CREATE_OBJECT_OK, myFunction);
+				soap.addEventListener(SoapEvent.CREATE_OBJECT_ERROR, myFunction);
 				/*
+				//19
 				soap.deleteObject();
-				soap.addEventListener(SoapEvent.DELETE_OBJECT_OK, test);
-				soap.addEventListener(SoapEvent.DELETE_OBJECT_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.DELETE_OBJECT_OK, myFunction);
+				soap.addEventListener(SoapEvent.DELETE_OBJECT_ERROR, myFunction);
+				//14 
 				soap.getApplicationLanguageData();
-				soap.addEventListener(SoapEvent.GET_APPLICATION_LANGUAGE_DATA_OK, test);
-				soap.addEventListener(SoapEvent.GET_APPLICATION_LANGUAGE_DATA_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.GET_APPLICATION_LANGUAGE_DATA_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_APPLICATION_LANGUAGE_DATA_ERROR, myFunction);
+				//9
 				soap.getApplicationResource();
-				soap.addEventListener(SoapEvent.GET_APPLICATION_RESOURCE_OK, test);
-				soap.addEventListener(SoapEvent.GET_APPLICATION_RESOURCE_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.GET_APPLICATION_RESOURCE_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_APPLICATION_RESOURCE_ERROR, myFunction);
+				//13
 				soap.getChildObjects();
-				soap.addEventListener(SoapEvent.GET_CHILD_OBJECTS_OK, test);
-				soap.addEventListener(SoapEvent.GET_CHILD_OBJECTS_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.GET_CHILD_OBJECTS_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_CHILD_OBJECTS_ERROR, myFunction);
+				//12
 				soap.getTopObjects();
-				soap.addEventListener(SoapEvent.GET_TOP_OBJECTS_OK, test);
-				soap.addEventListener(SoapEvent.GET_TOP_OBJECTS_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.GET_TOP_OBJECTS_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_TOP_OBJECTS_ERROR, myFunction);
+				//7
 				soap.getType();
-				soap.addEventListener(SoapEvent.GET_TYPE_OK, test);
-				soap.addEventListener(SoapEvent.GET_TYPE_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.GET_TYPE_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_TYPE_ERROR, myFunction);
+				// 8
 				soap.getTypeResource();
-				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_OK, test);
-				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_ERROR, test);
+				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_TYPE_RESOURCE_ERROR, myFunction);
 				*/
+				// 5
 			/*	soap.listApplications();
-				soap.addEventListener(SoapEvent.LIST_APLICATION_OK, test);
-				soap.addEventListener(SoapEvent.LIST_APLICATION_ERROR, test);
+				soap.addEventListener(SoapEvent.LIST_APLICATION_OK, myFunction);
+				soap.addEventListener(SoapEvent.LIST_APLICATION_ERROR, myFunction);
 					/*
+					// 6
 				soap.listTypes();
-				soap.addEventListener(SoapEvent.LIST_TYPES_OK, test);
-				soap.addEventListener(SoapEvent.LIST_TYPES_ERROR, test);
+				soap.addEventListener(SoapEvent.LIST_TYPES_OK, myFunction);
+				soap.addEventListener(SoapEvent.LIST_TYPES_ERROR, myFunction);
 		*/
-			/*--- Error --*/	
+			/*--- Error --*/	//10
 			/*	soap.renderWysiwyg();
-				soap.addEventListener(SoapEvent.RENDER_WYSIWYG_OK, test);
-				soap.addEventListener(SoapEvent.RENDER_WYSIWYG_ERROR, test);
+				soap.addEventListener(SoapEvent.RENDER_WYSIWYG_OK, myFunction);
+				soap.addEventListener(SoapEvent.RENDER_WYSIWYG_ERROR, myFunction);
 			/* --- End Error---*/
 			/*	
 				soap.setApplicationInfo();
-				soap.addEventListener(SoapEvent.SET_APLICATION_OK, test);
-				soap.addEventListener(SoapEvent.SET_APLICATION_ERROR, test);
+				soap.addEventListener(SoapEvent.SET_APLICATION_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_APLICATION_ERROR, myFunction);
 				
 				soap.setAttribute();
-				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_OK, test);
-				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_ERROR, test);
+				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_ERROR, myFunction);
 			*/
 				/*--- Error --*/	
-			/*
+			/* //18
 				soap.setResource();
-				soap.addEventListener(SoapEvent.SET_RESOURCE_OK, test);
-				soap.addEventListener(SoapEvent.SET_RESOURCE_ERROR, test);
+				soap.addEventListener(SoapEvent.SET_RESOURCE_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_RESOURCE_ERROR, myFunction);
 				
 			/*--- End Error --*/	
-			/*
+			/* //17
 				soap.setScript();
-				soap.addEventListener(SoapEvent.SET_SCRIPT_OK, test);
-				soap.addEventListener(SoapEvent.SET_SCRIPT_ERROR, test);
-				
+				soap.addEventListener(SoapEvent.SET_SCRIPT_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_SCRIPT_ERROR, myFunction);
+				//16
 				soap.setValue();
-				soap.addEventListener(SoapEvent.SET_VALUE_OK, test);
-				soap.addEventListener(SoapEvent.SET_VALUE_ERROR, test);
+				soap.addEventListener(SoapEvent.SET_VALUE_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_VALUE_ERROR, myFunction);
 				
-			*/	
+				//21
 				soap.getAllTypes();
-				soap.addEventListener(SoapEvent.GET_ALL_TYPES_OK, test);
-				soap.addEventListener(SoapEvent.GET_ALL_TYPES_ERROR, test);
+				soap.addEventListener(SoapEvent.GET_ALL_TYPES_OK, myFunction);
+				soap.addEventListener(SoapEvent.GET_ALL_TYPES_ERROR, myFunction);
+				setAttributes
+				
+				//22
+			*/	soap.setAttributes();
+				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_S_OK, myFunction);
+				soap.addEventListener(SoapEvent.SET_ATTRIBUTE_S_ERROR, myFunction);
+				
 			}
 			
-			private function test(ev:SoapEvent):void{
+			private function myFunction(ev:SoapEvent):void{
 				//xml = soap.loginResult();
 			//	trace(ev.target+":\n " + ev.result );
 				textArea.text +=   ev.type.toString()+ ": - " + ev.result + '\n';
-			/**
-			* вызов  
-			***/	
-		//		
-			//	soap.sendEcho('asd', bt, makeImage,makeImage);
-	
-//				soap.masEcho['asd'].addEventListener( SoapEvent.GET_ECHO_OK);
-				//soap.addEventListener(SoapEvent.GET_ECHO_ERROR, runAll);
+			}
+			private function test2(ev:UtilsEvent):void{
+				//xml = soap.loginResult();
+				trace(ev.type+" типа еррор! " );
+				//textArea.text +=   ev.type.toString()+  '\n';
 			}
 			private function start():void{
 				var fileUpload:FileUpload = new FileUpload(bt2);
 				fileUpload.startUpload();
-				fileUpload.addEventListener(UtilsEvent.FILE_UPLOAD_COMPLETE, test);	
-				fileUpload.addEventListener(UtilsEvent.FILE_UPLOAD_ERROR, test);	
-		//		file
-		//		trace('ЗАПУСТИЛ SOAP');
-		//		soap.sendEcho('asd2',  makeImage2, cansle);
-				
-			//	textArea.text += "\n"+evt.type.toString();
-				//if(evt == SoapEvent.GET_ECHO_OK) 
+				fileUpload.addEventListener(UtilsEvent.FILE_UPLOAD_COMPLETE, makeImage2);	
+				fileUpload.addEventListener(UtilsEvent.FILE_UPLOAD_ERROR, test2);	
 			}
 			
-			private function cansle(evt:Event):void{
-				Alert.show("Cancle upload");
-			}
 			
-			private function makeImage(evt:Event):void{
-							
-			//	addChild(img);
+			
+			
+			
+			private function makeImage2(evt:UtilsEvent):void{
+				//addChild(img2);
 				//trace ("img4: "+ img.width);
-			}
-			
-			private function makeImage2(evt:Event):void{
-				addChild(img2);
-				//trace ("img4: "+ img.width);
-				pict2.source = img2.source;
+				trace(evt.type + " типа ок! " );
+				pict2.source = evt.result;
+			//	 trace(evt.result.toString());
 			}
 			
 		]]>
