--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -42,9 +42,10 @@
 							<mx:LinkButton label="Add element"/>
 							<mx:LinkButton label="Remove element"/>
 						</mx:HBox>
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="bottom">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'displaytext')}:"/>
-							<mx:TabNavigator width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
+							<mx:TabNavigator id="ddownDispTextTabs" width="100%" tabHeight="16" borderStyle="none"
+								paddingTop="1" creationComplete="{createLangsTabsAt(ddownDispTextTabs, ddownDispTextCollector, 20);}"/>
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'value')}:"/>
 							<mx:TextArea height="20" width="100" cornerRadius="3"/>
 						</mx:HBox>
