--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -1,71 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" creationComplete="init();" 
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
+	
+	creationComplete="init();" 
+	resize="resizeHandler(event);"
+	
 	backgroundGradientColors="[#ffffff, #ffffff]" 
-	minWidth="800" minHeight="400" width="100%" height="100%"
-	xmlns:ns1="com.dougmccune.controls.*"
-	xmlns:ns3="com.vdom.*">
-	<mx:Script>
-		<![CDATA[
-			import com.vdom.Auth;
-			import com.vdom.Lang;
-			import mx.rpc.events.ResultEvent;
-			import mx.controls.Alert;
-			import mx.collections.XMLListCollection;
-			import com.gsolo.encryption.MD5;
-			import mx.controls.Alert;
-			
-			private var myLoader:URLLoader;
-			private var myXML:XML;
-			private var myXMLL:XMLList;
-			[Bindable]
-			private var XMLanguage:XML;
-			[Bindable]
-			private var myXMLLC:XMLListCollection;
-			[Bindable]
-			private var mtAuth:Auth;
-			[Bindable]
-			private var mtLang:Lang;
-			
-			private function init():void {
-
-			}
-			
-			private function checkAuth():void {
-				mtAuth = new Auth();
-				mtAuth.login(loginText.text, passwordText.text);
-				mtAuth.addEventListener('authComplete', authComplete);
-				mtAuth.addEventListener('authError', authError);
-			}
-			
-			private function authComplete(event:Event):void {
-				mtLang = new Lang();
-				mtLang.loadLanguage(settings.languages.@default);
-				viewstack.selectedChild=main;
-				trace('authComplete');
-			}
-			
-			private function authError(event:Event):void {
-				Alert.show('Ошибка! \n Неверные имя пльзователя или пароль');
-				passwordText.text = '';
-				trace('authError');
-			}
-			
-			private function getLangValue(mod:String, item:String):String {
-				return (XMLanguage.section.(@module_name == mod).item.(@name == item));
-			}
-			
-			private function changeEvt(evt:Event):void{
-				mtLang.loadLanguage(evt.currentTarget.selectedItem.@id);
-			}
-			private function setDefaultLanguage():void {
-				for (var i:uint=0; i < selectLang.dataProvider.length; i++ ){
-					if(selectLang.dataProvider[i].@id == settings.languages.@default)
-						selectLang.selectedItem = selectLang.dataProvider[i];
-				}
-			}
-
-		]]>
-	</mx:Script>
+	minWidth="800" minHeight="400"
+	
+	verticalScrollPolicy="off"
+	
+	xmlns:vdom="vdom.*" 
+	xmlns:controls="com.dougmccune.controls.*" 
+	xmlns:editor="vdom.components.editor.*"
+>
+	
+	<mx:Script source="scripts/Vdom.as"/>
 	<mx:Style source="theme/AeonGraphical.css" />
 	<mx:Style>
 		Application {
@@ -115,12 +64,15 @@
 			<mx:FormItem label="Password">
 				<mx:TextInput id="passwordText"/>
 			</mx:FormItem>
+			<mx:FormItem label="Language">
+				<mx:ComboBox/>
+			</mx:FormItem>
 			<mx:FormItem>
 				<mx:Button label="OK" click="checkAuth()"/>
 			</mx:FormItem>
 		</mx:Form>
 	</mx:Canvas>
-	<mx:Canvas id="main" width="100%" height="100%">
+	<mx:Canvas id="main" creationComplete="mainInitHandler(event)" width="100%" height="100%">
 	<mx:ApplicationControlBar
 		top="0" left="0" right="0" height="40" 
 		fillColors="[#000000, #000000]" fillAlphas="[0.63, 1.0]" cornerRadius="0" dock="true">
@@ -137,86 +89,87 @@
 		</mx:ComboBox>
 	</mx:ApplicationControlBar>
 	<mx:Image x="6" y="5" source="@Embed(source='img/logo.png')"/>
-	<ns3:MainTabNavigator id="tabPanel"
+	<vdom:MainTabNavigator id="tabPanel"
 		top="60" left="10" right="10"
 		paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80"
 		borderColor="#808080" borderThickness="1"  fillColors="[#c0c0c0, #c0c0c0]" fillAlphas="[1.0, 1.0]"
-		height="170">
-		<mx:Canvas label="{mtLang.lang.main_tab_panel.appmaintab}" width="100%" height="100%" id="appManTab" show="{placeCanvas.selectedChild=appManCanv}">
-			<mx:HBox horizontalAlign="left" horizontalGap="5" verticalAlign="middle" top="0" bottom="0" width="100%">
-				<ns1:ExtendedPanel styleName="extPan" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="120">
+		height="150">
+		<mx:Canvas label="{mtLang.lang.main_tab_panel.appmaintab}" width="100%" height="100%" id="appManTab" show="{placeCanvas.selectedChild=appManCanv}" verticalScrollPolicy="off">
+			<mx:HBox horizontalAlign="left" horizontalGap="5" verticalAlign="middle" top="0" bottom="0" width="100%" verticalScrollPolicy="off">
+				<controls:ExtendedPanel styleName="extPan" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="100">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.appmain_panel.news}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="120">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="100">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.appmain_panel.steps}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:HBox width="100%">
 						<mx:Button label="Find" height="61"/>
 						<mx:VBox width="100%" horizontalAlign="right">
-							<mx:TextInput/>
-							<mx:ComboBox></mx:ComboBox>
+							<mx:TextInput height="20"/>
+							<mx:ComboBox height="20"></mx:ComboBox>
 							<mx:Button label="Go"/>
 						</mx:VBox>
 					</mx:HBox>
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.appmain_panel.search}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
-					<mx:HorizontalList width="100%" columnCount="5" enabled="true"></mx:HorizontalList>
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="200">
+					<mx:List width="100%" height="100%" labelField="@id" id="applicationListContainer" 
+						change="trace(List(event.target).selectedItem.data)"/>
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.appmain_panel.applist}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="230">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" width="100">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.appmain_panel.appinfo}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
+				</controls:ExtendedPanel>
 			</mx:HBox>
 		</mx:Canvas>
 		<mx:Canvas label="{mtLang.lang.main_tab_panel.editortab}" width="100%" height="100%" id="editorTab" show="{placeCanvas.selectedChild=editorCanv}">
 			<mx:HBox horizontalAlign="left" horizontalGap="5" verticalAlign="middle" top="0" bottom="0" width="100%">
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" click="{placeCanvas.selectedChild=editorCanv}">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.edition}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1" click="{placeCanvas.selectedChild=scriptCanv}">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.script}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.preview}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.tree}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.analyse}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.statistics}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
-				<ns1:ExtendedPanel styleName="extPan" width="120" height="120" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
+				</controls:ExtendedPanel>
+				<controls:ExtendedPanel styleName="extPan" width="100" height="100" borderColor="#808080" borderStyle="solid" cornerRadius="5" borderThickness="1">
 					<mx:ControlBar horizontalAlign="center" x="0" y="76">
 						<mx:Label text="{mtLang.lang.editor_panel.events}"/>
 					</mx:ControlBar>
-				</ns1:ExtendedPanel>
+				</controls:ExtendedPanel>
 			</mx:HBox>
 		</mx:Canvas>
 		<mx:Canvas label="{mtLang.lang.main_tab_panel.multilintab}" width="100%" height="100%" id="multilinTab" show="{placeCanvas.selectedChild=multilinCanv}">
@@ -229,13 +182,14 @@
 		</mx:Canvas>
 		<mx:Canvas label="{mtLang.lang.main_tab_panel.vdomtab}" width="100%" height="100%" id="vdomTab" show="{placeCanvas.selectedChild=vdomCanv}">
 		</mx:Canvas>
-	</ns3:MainTabNavigator>
-	<mx:ViewStack id="placeCanvas" borderStyle="solid" borderThickness="1" borderColor="#808080" left="10" right="10" top="240" bottom="30">
+	</vdom:MainTabNavigator>
+	<mx:ViewStack id="placeCanvas" borderStyle="solid" borderThickness="1" borderColor="#808080" left="10" right="10" top="220" bottom="30">
 		<mx:Canvas id="appManCanv" width="100%" height="100%">
 			<mx:Label text="{mtLang.lang.main_tab_panel.appmaintab}" horizontalCenter="0" verticalCenter="0"/>
 		</mx:Canvas>
-		<mx:Canvas id="editorCanv" width="100%" height="100%">
-			<mx:Label text="{mtLang.lang.main_tab_panel.editortab}" horizontalCenter="0" verticalCenter="0"/>
+			<editor:Editor id="editorCanv" height="100%"/>
+		<mx:Canvas id="scriptCanv" width="100%" height="100%">
+			<mx:Label text="Script Panel" />
 		</mx:Canvas>
 		<mx:Canvas id="multilinCanv" width="100%" height="100%">
 			<mx:Label text="{mtLang.lang.main_tab_panel.multilintab}" horizontalCenter="0" verticalCenter="0"/>
