--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -15,8 +15,8 @@
 	
 	<mx:HBox verticalScrollPolicy="off" left="0" right="0" top="0" bottom="0">
 	
-	    <containers:Types id="types" 
-	    	height="100%" y="100" width="120" minWidth="170"
+	    <containers:Types id="types" resizeToContent="true"
+	    	height="100%" y="100" width="120" minWidth="170" minHeight="0"
 	    	dataProvider="{typesXML}"
 	    />
 	    
@@ -25,19 +25,20 @@
 	    		width="100%" height="100%" visible="false"
 	    		backgroundColor="#ffffff" backgroundAlpha="1.0" 
 	    		borderStyle="solid" borderThickness="20" borderColor="#000000"
+	    		dataProvider="{objectDescription}"
 	    	/>
 	    	<containers:Toolbar width="100%" id="toolbar"/>
 	    </mx:VBox>
 	    
-		<mx:VBox autoLayout="true" verticalGap="10" paddingTop="10" paddingLeft="10" paddingRight="10"  verticalScrollPolicy="auto" height="100%" width="220">
-			<containers:AttributesPanel title="Properties" id="objectProperties" label="Properties"
-				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{elementDescription}" width="200">
+		<mx:VBox autoLayout="true" verticalGap="10" paddingTop="10" paddingLeft="10" paddingRight="10" minHeight="0" verticalScrollPolicy="auto" height="100%" width="220" horizontalScrollPolicy="off">
+			<containers:AttributesPanel title="Properties" id="objectAttributes" label="Properties"
+				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{objectDescription}" width="200">
 	    	</containers:AttributesPanel>
 	    	<containers:ClosablePanel id="helpPanel" title="Help"  width="200" height="64">
-	    		<mx:Text htmlText="{objectProperties.help}" condenseWhite="true" width="100%" height="100%"/>
+	    		<mx:Text htmlText="{objectAttributes.help}" condenseWhite="true" width="100%" height="100%"/>
 	    	</containers:ClosablePanel>
 	    	<containers:ClosablePanel id="pagePanel" title="Pages"  width="200">
-	    		<mx:List dataProvider="{editorDataManager.pages.Object}" labelField="@Name" width="100%"/>
+	    		<mx:List id="pageList" dataProvider="{editorDataManager.pages.Object}" labelField="@Name" width="100%" change="pageChange()"/>
 	    	</containers:ClosablePanel>
 		</mx:VBox>
 		
