--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -215,6 +215,11 @@
 								</mx:dataProvider>
 							</mx:ComboBox>
 						</mx:HBox>
+
+						<mx:HBox width="100%" verticalAlign="middle">
+							<mx:Label id="XMLScriptNameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'xmlscriptname')}" width="{ident_1}"/>
+							<mx:TextArea id="XMLScriptNameTextArea" width="100%" height="20" cornerRadius="3"/>
+						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="verLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'version')}" width="{ident_1}"/>
