--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -25,14 +25,14 @@
 	    	<containers:Workspace id="editorMainCanvas"
 	    		width="100%" height="100%" visible="false"
 	    		backgroundColor="#ffffff" backgroundAlpha="1.0" 
-	    		borderStyle="solid" borderThickness="20" borderColor="#000000"
+	    		borderStyle="solid" borderThickness="2" borderColor="#000000"
 	    		dataProvider="{objectDescription}"
 	    	/>
 	    	<containers:Toolbar width="100%" id="toolbar"/>
 	    </mx:VBox>
 	    
 		<mx:VBox autoLayout="true" verticalGap="10" paddingTop="10" paddingLeft="10" paddingRight="10" minHeight="0" verticalScrollPolicy="auto" height="100%" width="220" horizontalScrollPolicy="off">
-			<containers:AttributesPanel title="Properties" id="objectAttributes" label="Properties"
+			<containers:AttributesPanel title="Attributes" id="objectAttributes" label="Properties"
 				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{objectDescription}" width="200">
 	    	</containers:AttributesPanel>
 	    	<containers:ClosablePanel id="helpPanel" title="Help"  width="200" height="64">
