Theme and config implement (w)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@628 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -39,7 +39,7 @@
 	    		<mx:Text htmlText="{objectAttributes.help}" condenseWhite="true" width="100%" height="100%"/>
 	    	</containers:ClosablePanel>
 	    	<containers:ClosablePanel id="pagePanel" title="Pages"  width="200">
-	    		<mx:List id="pageList" dataProvider="{editorDataManager.pages.Object}" labelField="@Name" width="100%" change="pageChange()"/>
+	    		<mx:List id="pageList" dataProvider="{editorDataManager.pages.Object}" labelField="@Name" width="100%" minHeight="0" change="pageChange()"/>
 	    	</containers:ClosablePanel>
 		</mx:VBox>
 	</mx:HBox>
