some global changes (w)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@631 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -22,7 +22,7 @@
 	    />
 	    
 	    <mx:VBox id="main" width="100%" bottom="0" height="100%">
-	    	<containers:Workspace id="editorMainCanvas"
+	    	<containers:WorkArea id="workArea"
 	    		width="100%" height="100%" visible="false"
 	    		backgroundColor="#ffffff" backgroundAlpha="1.0" 
 	    		borderStyle="solid" borderThickness="2" borderColor="#000000"
