--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -15,14 +15,6 @@
 >
 	
 	<mx:Script source="scripts/Vdom.as"/>
-	<mx:Style>
-		Application {
-		
-		}
-		
-
-
-	</mx:Style>
 	
 	<mx:XML source="settings.xml" id="settings" />
 	
@@ -155,15 +147,13 @@
 	</controls:MainTabNavigator>
 	<mx:ViewStack id="placeCanvas" borderStyle="solid" borderThickness="1" borderColor="#808080" left="10" right="10" top="220" bottom="30">
 		<mx:Canvas id="appManCanv" width="100%" height="100%">
-			
 			<mx:Label text="{mtLang.lang.main_tab_panel.appmaintab}" horizontalCenter="0" verticalCenter="0"/>
-			
 		</mx:Canvas>
-			<editor:Editor id="editorCanv" height="100%"/>
-		<mx:Canvas id="scriptCanv" width="100%" height="100%">
-			<scriptEditor:ScriptEditor x="0" y="0" width="100%" height="100%"/>
-			<!--- <mx:Label text="Script Panel" />- -->
-		</mx:Canvas>
+		
+		<editor:Editor id="editorCanv" height="100%"/>
+		
+		<scriptEditor:ScriptEditor id="scriptCanv" x="0" y="0" width="100%" height="100%"/>
+		
 		<mx:Canvas id="multilinCanv" width="100%" height="100%">
 			<mx:Label text="{mtLang.lang.main_tab_panel.multilintab}" horizontalCenter="0" verticalCenter="0"/>
 		</mx:Canvas>
