--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -8,11 +8,11 @@
 	backgroundColor="#ffffff" backgroundAlpha="1.0"
 	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
-	creationComplete="init();"
+	creationComplete="creationCompleteHandler();"
 	show="show();"
 	hide="hide();"
 >
-	<mx:Script source="../../../scripts/editor.as" />
+	<mx:Script source="includes/editor.as" />
 	
 	<mx:HBox verticalScrollPolicy="off" left="0" right="0" top="0" bottom="0">
 	
@@ -26,20 +26,20 @@
 	    		width="100%" height="100%" visible="false"
 	    		backgroundColor="#ffffff" backgroundAlpha="1.0" 
 	    		borderStyle="solid" borderThickness="2" borderColor="#000000"
-	    		dataProvider="{objectDescription}"
+	    		dataProvider="{editorDataManager.objectDescription}"
 	    	/>
-	    	<containers:Toolbar width="100%" id="toolbar"/>
+	    	<containers:Toolbar width="100%" type="{editorDataManager.objectDescription}" id="toolbar"/>
 	    </mx:VBox>
 	    
 		<mx:VBox autoLayout="true" verticalGap="10" paddingTop="10" paddingLeft="10" paddingRight="10" minHeight="0" verticalScrollPolicy="auto" height="100%" width="220" horizontalScrollPolicy="off">
 			<containers:AttributesPanel title="Attributes" id="objectAttributes" label="Properties"
-				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{objectDescription}" width="200">
+				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{editorDataManager.objectDescription}" width="200">
 	    	</containers:AttributesPanel>
 	    	<containers:ClosablePanel id="helpPanel" title="Help"  width="200" height="64">
 	    		<mx:Text htmlText="{objectAttributes.help}" condenseWhite="true" width="100%" height="100%"/>
 	    	</containers:ClosablePanel>
 	    	<containers:ClosablePanel id="pagePanel" title="Pages"  width="200">
-	    		<mx:List id="pageList" dataProvider="{editorDataManager.pages.Object}" labelField="@Name" width="100%" minHeight="0" change="pageChange()"/>
+	    		<mx:List id="pageList" labelField="@Name" width="100%" minHeight="0" change="topLevelObjectChange()"/>
 	    	</containers:ClosablePanel>
 		</mx:VBox>
 	</mx:HBox>
